--- a/Code/Makefile
+++ b/Code/Makefile
@@ -1,7 +1,7 @@
 DUMMY_OBJ = AIDummy.o
 
 # Add here any extra .o player files you want to link to the executable
-EXTRA_OBJ =
+EXTRA_OBJ = AIPere.o
 
 # Configuration
 OPTIMIZE = 2 # Optimization level    (0 to 3)
