Primers punts del joc BFS fets es xoquen menys ara he de canviar un parell de estructures i retorns de funcions per evitar que es xoquin totalment i per ultim fer que desapareixin tots els warnings

--- a/Code/Makefile.deps
+++ b/Code/Makefile.deps
@@ -4,6 +4,8 @@ AINull.o: AINull.cc Player.hh Info.hh Settings.hh Structs.hh Utils.hh \
  Defs.hh State.hh Action.hh Random.hh Registry.hh
 AIPere.o: AIPere.cc Player.hh Info.hh Settings.hh Structs.hh Utils.hh \
  Defs.hh State.hh Action.hh Random.hh Registry.hh
+AIrand.o: AIrand.cc Player.hh Info.hh Settings.hh Structs.hh Utils.hh \
+ Defs.hh State.hh Action.hh Random.hh Registry.hh
 Action.o: Action.cc Action.hh Structs.hh Utils.hh Defs.hh
 Board.o: Board.cc Board.hh Info.hh Settings.hh Structs.hh Utils.hh \
  Defs.hh State.hh Action.hh Random.hh
