--- a/Code/.vscode/settings.json
+++ b/Code/.vscode/settings.json
@@ -8,6 +8,9 @@
         "ios": "cpp",
         "iosfwd": "cpp",
         "type_traits": "cpp",
-        "xutility": "cpp"
+        "xutility": "cpp",
+        "xlocale": "cpp",
+        "map": "cpp",
+        "xtree": "cpp"
     }
 }
