--- a/Code/Makefile.deps
+++ b/Code/Makefile.deps
@@ -14,6 +14,8 @@ Game.o: Game.cc Game.hh Player.hh Info.hh Settings.hh Structs.hh Utils.hh \
 Info.o: Info.cc Info.hh Settings.hh Structs.hh Utils.hh Defs.hh State.hh
 Main.o: Main.cc Game.hh Player.hh Info.hh Settings.hh Structs.hh Utils.hh \
  Defs.hh State.hh Action.hh Random.hh Registry.hh Board.hh
+Pere.o: Pere.cc Player.hh Info.hh Settings.hh Structs.hh Utils.hh Defs.hh \
+ State.hh Action.hh Random.hh Registry.hh
 Player.o: Player.cc Player.hh Info.hh Settings.hh Structs.hh Utils.hh \
  Defs.hh State.hh Action.hh Random.hh Registry.hh
 Random.o: Random.cc Random.hh Utils.hh Defs.hh
